--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
 <div class="bg">
     <div class="main-box">
-
+      <img src="./splash.png" alt="" id="splash" >
+<img  class="forest-img"src="./Background.png" alt="">
       <img  id="bunny-right" src="./Bunny image/bunny-right.png" alt="">
       <img  id="bunny-straight" class="bunny-straight" src="./Bunny image/bunny-front.svg" alt="">
       <!-- <img  id="bunny-left" src="./Bunny image/bunny-left.svg" alt=""> -->
