--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <div class="bg">
     <div class="main-box">
       <img src="./splash.png" alt="" id="splash" >
+      <img src="./carot-icon.svg" alt="" id="carrot" >
 <img  id="forest-img" class="forest-img"src="./Background.png" alt="">
       <img  id="bunny-right" src="./Bunny image/bunny-right.png" alt="">
-      <img  id="bunny-straight-sleep" src="./Bunny image/bunny sleep.png" alt="">
+      <img  id="bunny-straight-sleep" src="./Bunny image/bunny-sleep.png" alt="">
       <img  id="bunny-straight" class="bunny-straight" src="./Bunny image/bunny-front.svg" alt="">
       <!-- <img  id="bunny-left" src="./Bunny image/bunny-left.svg" alt=""> -->
       <meter id="hungerMeter" min="0" low="10" optimum="50"  max="100" value="100"></meter>
